Closed Bug 1634829 Opened 4 years ago Closed 4 years ago

webgpu color blending doesn't work

Categories

(Core :: Graphics: WebGPU, defect, P3)

77 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox77 --- verified

People

(Reporter: rubickent, Assigned: kvark)

Details

Attachments

(2 files)

Attached image native_rendering.gif

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:75.0) Gecko/20100101 Firefox/75.0

Steps to reproduce:

I have a rust application using wgpu+winit that I am compiling to wasm.
Source: https://github.com/rukai/brawllib_rs/blob/master/examples/visualiser_for_wasm.rs
hosted at: https://rukaidata.com/webgpu_test

I am running it on:

  • the latest firefox nightly
  • arch linux
  • nvidia GTX 960

Actual results:

The application will happily run for a few minutes before the firefox tab crashes.
However it seems like color blending is having no effect.
Color blending works fine when the same application is compiled as a native desktop application.

Expected results:

I have attached a gif of the expected rendering results. (obtained from native desktop rendering)

Priority: -- → P3
Assignee: nobody → dmalyshau
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6333a40ed1fd
Update WebGPU blend descriptors r=emilio
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Flags: qe-verify+

Hi Rukai, it seems that the test link doesn't work. Could you take a look on 77 and see if it is fixed? Thanks!

Flags: qe-verify+ → needinfo?(rubickent)

Hi.
I had verified the issue was fixed in the next nightly after the fix was merged.
And it looked like the issue was marked as resolved so I didn't think any further action was needed from me.

As you pointed out the link doesn't work anymore presumably due to changes in the webgpu api since then.
So I updated to the latest wgpu to make sure its using the latest webgpu api and i'm still getting issues, but I'm pretty sure this sort of thing will be reported separately by the crash reporter so no need to worry.

ah, my browser was just misconfigured, its running now, I can confirm fix still works.

Flags: needinfo?(rubickent)

Thanks for confirming Rukai!

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: