Bug 1634829 - Update WebGPU blend descriptors r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D73530